# ghss

./: .gitignore  .release-please-manifest.json  AGENTS.md  ARCHITECTURE.md  Cargo.toml  K8S.md  LICENSE  PLAN.md  README.md  TODO.md  action.yaml  release-please-config.json  renovate.json
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml  demo.yml  release-please.yml  release.yml
ghss/: CHANGELOG.md  Cargo.toml
ghss-cli/: CHANGELOG.md  Cargo.toml
ghss-cli/src/: main.rs
ghss-cli/tests/: depth_integration.rs  integration.rs
ghss-cli/tests/fixtures/: depth-demo-workflow.yml  depth-test-workflow.yml  malformed-workflow.yml  sample-workflow.yml  sha-pinned-workflow.yml
ghss-scanner/: CHANGELOG.md  Cargo.toml  Dockerfile  demo.sh
ghss-scanner/examples/: demo-config.toml
ghss-scanner/migrations/: 20240101000000_initial_schema.sql  20240102000000_add_indexes.sql  20260509120000_add_sarif_uploads.sql
ghss-scanner/src/: config.rs  main.rs  scan.rs  scheduler.rs  storage.rs  upload.rs
ghss-scanner/tests/: integration.rs  scan_integration.rs  upload_integration.rs
ghss-scanner/tests/fixtures/: invalid-cron.toml  invalid-storage.toml  invalid-unknown-key.toml  minimal-config.toml  valid-config.toml
ghss-tui/: Cargo.toml
ghss-tui/src/: main.rs
ghss/src/: action_ref.rs  advisory.rs  context.rs  depth.rs  github.rs  lib.rs  output.rs  pipeline.rs  walker.rs  workflow.rs
ghss/src/output/: mod.rs  sarif.rs
ghss/src/providers/: ghsa.rs  osv.rs
ghss/src/stages/: advisory.rs  composite.rs  resolve.rs  scan.rs  workflow_expand.rs
ghss/src/stages/dependency/: go.rs  mod.rs  npm.rs
ghss/tests/fixtures/: test-rsa-key.pem  test-rsa-key.pub
src/: action_ref.rs  advisory.rs  cli.rs  ghsa.rs  github.rs  lib.rs  main.rs  output.rs  workflow.rs
src/lib/: action_ref.rs  advisory.rs  context.rs  deps.rs  ghsa.rs  github.rs  mod.rs  osv.rs  output.rs  pipeline.rs  scan.rs  stage.rs  walker.rs  workflow.rs
src/lib/providers/: ghsa.rs  mod.rs  osv.rs
src/lib/stages/: advisory.rs  composite.rs  dependency.rs  mod.rs  resolve.rs  scan.rs  scan_stage.rs  workflow_expand.rs
src/lib/stages/dependency/: mod.rs  npm.rs
tests/: depth_integration.rs  integration.rs
tests/fixtures/: local-only-workflow.yml  reusable-workflow.yml  vulnerable-workflow.yml
