[workspace]
members = ["ghss", "ghss-cli", "ghss-scanner"]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
clap-verbosity-flag = { version = "3", default-features = false, features = ["tracing"] }
flate2 = "1"
futures = "0.3"
percent-encoding = "2"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
serde-sarif = "0.8"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
wiremock = "0.6"

[profile.release]
lto = true
strip = true
