[package]
name = "ghss-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ghss"
path = "src/main.rs"

[dependencies]
ghss = { path = "../ghss" }
anyhow.workspace = true
clap.workspace = true
clap-verbosity-flag.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
serde_json.workspace = true
wiremock.workspace = true
