[package]
name = "ghss"
version = "0.3.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
jsonwebtoken.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde-sarif.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
wiremock.workspace = true
